// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`system props withSystemProps() applies multiple theme values 1`] = `
.emotion-0 {
  font-family: Helvetica,Verdana,sans-serif;
  margin: 16px;
}

<b
  blacklist={
    Array [
      "fontFamily",
      "font",
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "css",
    ]
  }
  className="emotion-0"
  fontFamily="sans"
  m={2}
/>
`;

exports[`system props withSystemProps() applies one theme value 1`] = `
.emotion-0 {
  margin: 16px;
}

<b
  blacklist={
    Array [
      "m",
      "mt",
      "mr",
      "mb",
      "ml",
      "mx",
      "my",
      "p",
      "pt",
      "pr",
      "pb",
      "pl",
      "px",
      "py",
      "css",
    ]
  }
  className="emotion-0"
  m={2}
/>
`;
